--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -34,5 +34,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.25.1",
+    "babel-eslint": "^10.1.0",
+    "chai": "^5.1.1",
+    "eslint": "^8.57.0",
+    "mocha": "^10.7.0",
+    "supertest": "^7.0.0"
   }
 }
