change useState initial value from localStorage

--- a/task-manager-backend/package.json
+++ b/task-manager-backend/package.json
@@ -9,17 +9,18 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "sequelize": "^6.20.1",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "sequelize": "^6.20.1"
   },
   "devDependencies": {
-    "mocha": "^10.2.0",
-    "chai": "^4.3.6",
-    "supertest": "^6.3.3",
-    "nodemon": "^2.0.22",
     "@babel/register": "^7.18.11",
-    "dotenv": "^16.1.4"
+    "chai": "^4.3.6",
+    "dotenv": "^16.1.4",
+    "mocha": "^10.2.0",
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=14.0.0"
