--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "globals": "^15.9.0"
   },
   "scripts": {
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "mocha 'task-manager-backend/test/**/*.js' --require @babel/register --exit"
   }
 }
