--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -23,6 +23,9 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '20.x'
+        
+    - name: Install mocha
+      run: npm install -g mocha
 
     - name: Install dependencies
       run: npm install
