--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
-    "axios": "^1.7.3"
+    "axios": "^1.7.3",
+    "express": "^4.17.1"
   },
   "devDependencies": {
+    "@babel/register": "^7.18.11",
     "@babel/eslint-parser": "^7.25.1",
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-react": "^7.24.7",
@@ -11,7 +13,12 @@
     "eslint": "^9.8.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.35.0",
-    "globals": "^15.9.0"
+    "globals": "^15.9.0",
+    "chai": "^4.3.6",
+    "dotenv": "^16.1.4",
+    "mocha": "^10.2.0",
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3"
   },
   "scripts": {
     "lint": "eslint .",
