--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "axios": "^1.7.3",
     "express": "^4.17.1",
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "@babel/register": "^7.18.11"
   },
   "devDependencies": {
     "@babel/register": "^7.18.11",
