github actions server add

--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -15,6 +15,21 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: myapp_test
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -23,12 +38,21 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '20.x'
-        
+
     - name: Install mocha
       run: npm install -g mocha
+      working-directory: server
 
     - name: Install dependencies
       run: npm install
+      working-directory: server
 
     - name: Run tests
+      env:
+        DATABASE_URL: postgres://postgres:password@localhost:5432/myapp_test
       run: npm test
+      working-directory: server
+
+    - name: Run ESLint
+      run: npm run lint
+      working-directory: server
