--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "axios": "^1.7.3",
     "express": "^4.17.1",
     "concurrently": "^8.2.2",
-    "@babel/register": "^7.18.11"
+    "@babel/register": "^7.18.11",
+    "mocha": "^10.2.0"
   },
   "devDependencies": {
     "@babel/register": "^7.18.11",
@@ -18,7 +19,6 @@
     "globals": "^15.9.0",
     "chai": "^4.3.6",
     "dotenv": "^16.1.4",
-    "mocha": "^10.2.0",
     "nodemon": "^2.0.22",
     "supertest": "^6.3.3"
   },
