--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -39,6 +39,10 @@ jobs:
       with:
         node-version: '20.x'
 
+    - name: Install mocha
+      run: npm install -g mocha
+      working-directory: task-manager-backend
+
     - name: Install dependencies
       run: npm install
       working-directory: task-manager-backend
