--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -10,6 +10,11 @@ on:
       - develop
       - main
 
+env:
+  DB_HOST: localhost
+  DB_USER: postgres
+  DB_PASSWORD: postgres
+
 jobs:
   test:
 
@@ -19,8 +24,9 @@ jobs:
       postgres:
         image: postgres:latest
         env:
+          POSTGRES_HOST: localhost
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: 'password'
+          POSTGRES_PASSWORD: postgres
           POSTGRES_DB: myapp_test
 
         ports:
