--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -61,5 +61,5 @@ jobs:
       working-directory: task-manager-backend
 
     - name: Run ESLint
-      run: npm lint
+      run: npm run lint
       working-directory: task-manager-backend
