github actions server add

--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -61,4 +61,4 @@ jobs:
       working-directory: task-manager-backend
 
     - name: Run ESLint
-      run: npm run lint
+      run: sudo npm run lint
