--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -52,7 +52,6 @@ jobs:
 
     - name: Install dependencies
       run: npm install
-      working-directory: task-manager-backend
 
     - name: Run tests
       env:
@@ -61,4 +60,4 @@ jobs:
       working-directory: task-manager-backend
 
     - name: Run ESLint
-      run: sudo npm run lint
+      run: npm run lint
