--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
     "express": "^4.17.1",
     "concurrently": "^8.2.2",
     "@babel/register": "^7.18.11",
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "@eslint/js": "^9.8.0",
+    "eslint": "^9.8.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-react": "^7.35.0"
   },
   "devDependencies": {
     "@babel/register": "^7.18.11",
